# erpc_example

./: CMakeLists.txt  c_example_client.cpp  c_example_client.h  c_example_server.cpp  c_example_server.h  client.c  example.erpc  example_client.cpp  example_client.hpp  example_common.h  example_common.hpp  example_interface.cpp  example_interface.hpp  example_server.cpp  example_server.hpp  server.c
